Implement named argument

--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,13 @@
 {
-    "name": "conedevelopment/blade-filters",
+    "name": "videni/blade-filters",
     "description": "Use filters easily in your blade templates.",
     "type": "project",
     "license": "MIT",
     "authors": [
+        {
+            "name": "Vidy Videni",
+            "email": "videni@foxmail.com"
+        },
         {
             "name": "Cone Development",
             "email": "hello@conedevelopment.com"
@@ -20,13 +24,12 @@
         }
     },
     "require": {
-        "php": "^7.3 || ^8.0",
-        "illuminate/support": "^8.0 || ^9.0",
-        "illuminate/view": "^8.0 || ^9.0"
+        "php": "^7.2.5 | ^8.0",
+        "illuminate/support": "^6.0|^7.0|^8.0|^9.0"
     },
     "require-dev": {
-        "laravel/laravel": "9.x-dev",
-        "phpunit/phpunit": "^9.5"
+        "laravel/laravel": "^6.0|^7.0|^8.0|^9.0",
+        "phpunit/phpunit": "^9.0"
     },
     "extra": {
         "laravel": {
